--- a/package.json
+++ b/package.json
@@ -20,9 +20,18 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/viewerjs": "^1.0.2",
+    "doc-viewer": "^0.0.10",
+    "mammoth": "^1.6.0",
+    "ng2-pdf-viewer": "^10.0.0",
+    "ng2-pdfjs-viewer": "^16.0.4",
+    "ngx-doc-viewer": "^15.0.1",
+    "ngx-doc-viewer2": "^1.5.3",
+    "ngx-extended-pdf-viewer": "^19.0.0-alpha.6",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "viewerjs": "^1.11.6",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
